frame/support/test/tests/construct_runtime_ui/missing_origin_generic_on_module_with_instance.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		System: system::{Pallet},
		Balance: balances::<Instance1>::{Origin},
	}
}

fn main() {}
